jS-Strict-Mode/Examples/example13.js
// The word eval cannot be used as a variable
"use strict";
// let eval = 3.14; // Removing comment from this statement will result in below mentioned Error.
// SyntaxError: Unexpected eval or arguments in strict mode